# financial-modelling-valuation

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: account_mapping.yaml  business_kpi_mapping.msft.yaml  forecast_assumptions.example.yaml  initial_state.example.yaml  model_config.example.yaml  ratio_definitions.yaml  valuation_assumptions.example.yaml
data/: README.md
data/sample/: aapl_fy2021_2025_history.json  cost_fy2021_2025_history.json  cost_manual_history_input.xlsx  ko_fy2021_2025_history.json  msft_business_kpis_fy2023_2025.csv  msft_fy2021_2025_history.json  wmt_fy2022_2026_history.json
docs/: aapl_compatibility_validation.md  architecture.md  business_driver_backtesting.md  business_driver_models.md  business_model_recommendation.md  cost_compatibility_validation.md  data_model.md  dcf_methodology.md  excel_export_design.md  ko_msft_compatibility_validation.md  manual_data_input.md  methodology.md  modelling_conventions.md  msft_live_dimensional_xbrl_validation.md  mvp_scope.md  output_style_guide.md  reference_model_analysis.md  scenario_analysis.md  three_statement_linkage.md  wmt_live_validation.md
examples/aapl/: README.md  forecast_assumptions.yaml  valuation_assumptions.yaml
examples/cost/: README.md  business_drivers.yaml  forecast_assumptions.downside.yaml  forecast_assumptions.upside.yaml  forecast_assumptions.yaml  scenario_set.yaml  valuation_assumptions.yaml
scripts/: audit_sec_company.py  build_public_history_fixture.py  public_release_check.py
src/fmva/: cli.py  (+6 more)
(+95 files in other folders)
