[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fmva-framework"
version = "0.1.0"
description = "Modular and explainable financial modelling and valuation for U.S. public companies."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FMVA Framework Contributors" }]
dependencies = [
  "openpyxl>=3.0",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "PyYAML>=6.0",
  "tabulate>=0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.10",
  "pandas-stubs>=2.2",
  "types-openpyxl>=3.1",
  "types-PyYAML>=6.0",
]

[project.scripts]
fmva = "fmva.cli:main"
fmva-run = "fmva.run:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["fmva"]

[[tool.mypy.overrides]]
module = [
  "fmva.analysis.ratios",
  "fmva.checks.historical",
  "fmva.checks.statements",
  "fmva.data.statement_builder",
  "fmva.forecasting.history_adapter",
  "fmva.output.charts",
  "fmva.output.excel",
  "fmva.valuation.dcf",
]
ignore_errors = true
